game-package (17) unstable; urgency=low

  [ Jon Dowland ]
  * add a generic game-package binary

  [ Eddy Petrișor ]
  * add missing Vcs-Svn headers

  [ Jon Dowland ]
  * add support for (ultimate) doom
  * remove make-wad-package and references to it

 -- Jon Dowland <jon@alcopop.org>  Sat, 15 Mar 2008 14:28:28 +0000

games-package (16) unstable; urgency=low

  * side-work to develop something for quake3
  * renamed to games-package
  * quake3-data support

 -- Jon Dowland <jon@alcopop.org>  Sun, 18 Mar 2007 17:33:01 +0000

doom-package (15) unstable; urgency=low

  * Initial upload. Closes: #280045,  #326813.
  * update comments in make-wad-package (thanks Ben Hutchings)
  * remove dummy md5sum and doom2.wad file from package
    (thanks Ben Hutchings)
  * auto-generate md5sums in the doom2-wad .deb on build
  * remove binutils dependency
  * use Build-Depends, not -Indep (thanks Ben Hutchings)
  * make-wad-package is a bash script (not sh, yet)
  * clarify copyright (GPL-2)
  * use fakeroot again (or doom2-wad will unpack with the wrong uid)
  * manually adjust perms in doom2-wad (unpacked source might be mangled)

 -- Jon Dowland <jon@alcopop.org>  Sun,  1 Oct 2006 21:07:31 +0100
 
doom-package (14) unstable; urgency=low

  * restructure internal package to use dpkg-deb
    rather than dpkg-buildpackage (similar to the
    internal work on make-wad-package)
  * ensure doom2-wad .deb is in section non-free
  * clarify copyright in doom2-wad

 -- Jon Dowland <jon@alcopop.org>  Sun,  1 Oct 2006 17:20:35 +0100

doom-package (13) unstable; urgency=low

  * big restructuring: use dpkg-deb a lot
  * calculate correct Installed-Size

 -- Jon Dowland <jon@alcopop.org>  Sat, 30 Sep 2006 19:06:28 +0100

doom-package (12) unstable; urgency=low

  * do not invoke dpkg, save deb in CWD instead
  * thus, do not check for or require root
  * quote a few more variables
  * change maintainer
  * update version of internal package
  * make BINDIR /usr/games
